# crimson-recall

./: Cargo.toml  index.html
src/: constants.rs  events.rs  lib.rs  sprite.rs
src/components/: collision.rs  hit_box.rs  mod.rs  position.rs  velocity.rs
src/constants/: canvas.rs  controls.rs  mod.rs  player.rs  weapon.rs
src/sprites/: mod.rs  platform.rs  player.rs  weapon.rs
